lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  labels:
    name: ingress-frontend
spec:
  tls:
    - hosts:
        - sviridovkonstantin.local
      secretName: tls-secret
  rules:
    - host: sviridovkonstantin.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
